# look

./: .gitignore  LICENSE  NOTICE  README.md
.github/workflows/: security.yml
cpp/: CMakeLists.txt  Dockerfile.almalinux8-apache  Dockerfile.almalinux8-build  Dockerfile.install-test  Dockerfile.linux-build  Dockerfile.rps-test  Dockerfile.ubuntu-apache  README.md  debug_test.sqlite3  dobuild.bat  docker-compose.fcgi-mysql.yml  docker-compose.test.yml  docker-init.sql  ft_test.sqlite3  run.bat  run_rps_test.sh  start_almalinux_apache.sh  start_ubuntu_apache.sh  test_db_temp.sqlite3  test_fcgi_client.py  test_phase95.sh  test_ubuntu_apache.sh
cpp/docker/: Dockerfile.almalinux-test  Dockerfile.almalinux8-build  Dockerfile.centos7-build  Dockerfile.ubuntu-test
cpp/include/look/: ast.h  bytecode.h  cache.h  compiler.h  db_connection.h  dkim.h  dns.h  event_loop.h  fcgi.h  http_client.h  http_server.h  installer.h  interpreter.h  jobs_store.h  lexer.h  logger.h  mail.h  mysql_client.h  parallel_runtime.h  parser.h  postgres_client.h  queue_store.h  repl.h  smtp_server.h  sqlite_client.h  sse.h  stdlib.h  template.h  test_runner.h  timer.h  token.h  vm.h  web.h  websocket.h
cpp/src/: cache_stdlib.cpp  cgi_main.cpp  compiler.cpp  date_stdlib.cpp  dkim.cpp  dns.cpp  event_loop.cpp  extra_stdlib.cpp  fcgi_main.cpp  file_stdlib.cpp  http_client.cpp  http_main.cpp  http_server.cpp  http_stdlib.cpp  installer.cpp  interpreter.cpp  jobs_stdlib.cpp  lexer.cpp  logger.cpp  mail_stdlib.cpp  main.cpp  mysql_client.cpp  parallel_runtime.cpp  parser.cpp  postgres_client.cpp  queue_stdlib.cpp  repl.cpp  smtp_server.cpp  sqlite_client.cpp  sse.cpp  stdlib.cpp  template_stdlib.cpp  test_runner.cpp  timer_stdlib.cpp  token.cpp  vm.cpp  web.cpp  web_stdlib.cpp  websocket.cpp
cpp/src/linenoise/: linenoise.c  linenoise.h
docs/: index.html  package-system.md  plesk-apache-deployment.md  plesk-extension-kurulum.md  plesk-extension.md  ubuntu-deployment.md
docs/codlook.com/: index.html
docs/packages.codlook.com/: index.html  packages.js
examples/: hello.lk  monitor.lk  websocket.lk
extensions/plesk/: .gitattributes  Dockerfile.test  meta.xml  setup.sh
extensions/plesk/docker/: plesk-mock.conf  plesk-mock.sh  start.sh
extensions/plesk/htdocs/: index.php
extensions/plesk/htdocs/scripts/: disable.sh  enable.sh  install.sh  status.sh  uninstall.sh
extensions/plesk/scripts/: post-install  pre-uninstall
extensions/vscode/look-lang/: language-configuration.json  package-lock.json  package.json
extensions/vscode/look-lang/snippets/: look.json
extensions/vscode/look-lang/syntaxes/: look.tmLanguage.json
pkg/firebase/: firebase.lk
pkg/firebase/docker/: Dockerfile  docker-compose.yml
pkg/iyzico/: README.md  iyzico.lk
tests/integration/: test_db_security.lk  test_wss.py
tests/security/: README.md  regression.lk
tests/unit/: test_assoc2.lk  test_assoc3.lk  test_assoc4.lk  test_assoc_vm.lk  test_bytecode.lk  test_connect.lk  test_exec.lk  test_fn_vm.lk  test_insert.lk  test_nodb.lk  test_rps.lk  test_security.lk  test_vm_assoc.lk  test_vm_db.lk  test_vm_parallel.lk  test_vm_parallel_db.lk  test_vm_route.lk  test_vm_simple.lk
